[Rule based auto-tagging] Add rule sync service (#18128)
---------

Signed-off-by: Kaushal Kumar <ravi.kaushal97@gmail.com>